# Optimization-algorithms

./: .gitignore  Algoritmos.py  README.MD  README.md  axo-endpoint.yml  client.py  docker-compose.yml  pyproject.toml  requirements.txt  test.py
.github/workflows/: run_test.yml
Algoritmos/model/app/: MOEAD.py  evaluate.py
Algoritmos/model/core/: bees_algorithm.py  bellaman_ford.py  simulated_annealing.py  tabu_search.py
Algoritmos/model/problems/: problem.py
Algoritmos/model/tests/: test_problems.py
axo_algoritmos/: bees_algorithm.py  concurrencia.py  cuckoo_search.py  get_moea.py  get_nsga2.py  grafos.py  local_search.py  moead.py  nsga2.py  scatter_search.py  simulated_annealing.py  suma_ponderada.py
axo_algoritmos/common/: definitios.py
axo_algoritmos/errores/: errores.md
benchmarks/: analyze_logs.py  benchmark_algorithms.py
common/: definitios.py
log/: activex-mictlanx  activex-mictlanx.2025-06-16_20-57  activex-mictlanx.error
model/: company.py
model/app/: MOEA.py  MOEAD.py  MOEApy  main.py
model/app/sample/: resultados_run_1.csv  resultados_run_2.csv
model/core/: bees_algorithm.py  cuckoo_search.py  dijkstra.py  moead.py  nsga2.py  scatter_search.py  suma_ponderada.py
model/problems/: problem.py
optikit/algorithms/: bees_algorithm.py  bellaman_ford.py  cuckoo_search.py  dijkstra.py  local_search.py  moead.py  nsga2.py  scatter_search.py  simulated_annealing.py  suma_ponderada.py  tabu_search.py  test_al.py
tests/: test_bellaman_ford.py  test_bess_algorithm.py  test_cuckoo_search.py  test_dijkstra.py  test_local_search.py  test_moea.py  test_nsga2.py  test_problems.py  test_scatter_search.py  test_simulated_annealing.py  test_suma_ponderada.py  test_tabu_search.py
tests/benchmark/: README.md  axo_vs_baseline.py  test_axo_local_search.py  test_axo_simulated_annealing_local.py  test_baseline_local_search.py  test_baseline_simulated_annealing.py
